--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Smaranjit Ghose">
-        <meta name="description" content="Order food from HR05">
+        <meta name="description" content="Order food">
         <meta name="keywords" content="Food, Ordering, HTML,food-ordering">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
         <!--Title of the page-->
-        <title>HR05 | Home</title> 
+        <title>Food Ordering System | Home</title> 
     </head>
     <!--Content of the web page-->
     <body> 
