--- a/login.html
+++ b/login.html
@@ -7,13 +7,13 @@
         <!--Used to contain HTML metadata-->
         <meta charset="UTF-8">
         <meta name="author" content="Smaranjit Ghose">
-        <meta name="description" content="Order food from HR05">
+        <meta name="description" content="Order food ">
         <meta name="keywords" content="Food, Ordering, HTML,food-ordering">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
         <!--Title of the page-->
-        <title>HR05 | Login</title>
+        <title>Food Ordering System | Login</title>
     </head>
     <!--Content of the web page-->
     <body>
@@ -35,10 +35,10 @@
                 <label>Password : </label>   
                     <input type="password" placeholder="Enter Password" name="password" required>  
                     <br><br>
-                <button><a href="orderfromhr05.netlify.app/"target="_blank">Login</a></button>
+                <button><a href="https://foodordering.netlify.app/"target="_blank">Login</a></button>
 
             <br><br><input type="checkbox" checked="checked"> Remember me   
-            <br><label> <a href="orderfromhr05.netlify.app/" target="_blank">Forgot Password ?</a> </label></red>  
+            <br><label> <a href="https://foodordering.netlify.app/" target="_blank">Forgot Password ?</a> </label></red>  
             </div>
         </form> 
         <!--Footer-->
