--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="./login.html">Login</a>
         </div>
      <!--Header-->   
-        <center><h1>Welcome to HR05</h1></center>  
+        <center><h1>Welcome to Food Ordering System</h1></center>  
         <center>
             <img src = "assets/home.png" alt ="Interior View of Restaurent" width = 30%>
         </center>
