--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <!--Header-->
         <center><h1>We would love to hear from you!</h1></center>
         <center><img src = "assets/contact.png" alt = "contact-us" width = 40%></center>
-        <form action="https://food_ordering_app/submit">
+        <form action="https://foodordering.netlify.app/">
         <center>
                <label>Name:
                 <input type = "text" placeholder="Your Name" required>
