--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <center>
             <img src = "assets/home.png" alt ="Interior View of Restaurent" width = 30%>
         </center>
+        <center>
         <p>
             From the finger licking butter chicken to the mouth watering malaai chaap, we have it all!
         </p>
@@ -43,6 +44,7 @@
                         <li>Free Home Delivery</li>
                     </ul>
                 </p>
+            </center>
         <!--Footer-->
     </body>
 
