--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!-- Tells version  of HTML-->
 <!DOCTYPE html>
 <!--HTML root elements-->
-<html>
+<!DOCTYPE html>
 <!--Used to contain HTML metadata-->
     <head>
         <!--Used to contain HTML metadata-->
