--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                 <label>Password : </label>   
                     <input type="password" placeholder="Enter Password" name="password" required>  
                     <br><br>
-                <button><a href="https://foodordering.netlify.app/"target="_blank">Login</a></button>
+                <button href="https://foodordering.netlify.app/">Login</a></button>
 
             <br><br><input type="checkbox" checked="checked"> Remember me   
             <br><label> <a href="https://foodordering.netlify.app/" target="_blank">Forgot Password ?</a> </label></red>  
