--- a/login.html
+++ b/login.html
@@ -1,12 +1,12 @@
 <!-- Tells version  of HTML-->
 <!DOCTYPE html>
 <!--HTML root elements-->
-<!DOCTYPE html>
+<html>
 <!--Used to contain HTML metadata-->
     <head>
         <!--Used to contain HTML metadata-->
         <meta charset="UTF-8">
-        <meta name="author" content="Smaranjit Ghose">
+        <meta name="author" content="Anush Bhatia">
         <meta name="description" content="Order food ">
         <meta name="keywords" content="Food, Ordering, HTML,food-ordering">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
