--- a/menu.html
+++ b/menu.html
@@ -1,10 +1,11 @@
 <!-- Tells version  of HTML-->
 <!DOCTYPE html>
 <!--HTML root elements-->
+<html>
 <!--Used to contain HTML metadata-->
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Smaranjit Ghose">
+        <meta name="author" content="Anush Bhatia">
         <meta name="description" content="Order food">
         <meta name="keywords" content="Food, Ordering, HTML,food-ordering">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
