--- a/login.html
+++ b/login.html
@@ -12,18 +12,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
+        <link rel="stylesheet" href="assets/style.css">
         <!--Title of the page-->
         <title>Food Ordering System | Login</title>
     </head>
     <!--Content of the web page-->
     <body>
         <!-- Navigation Bar -->
-        <div class="nav-bar">
+        <div class="topnav">
             <a href="./index.html">Home</a>
             <a href="./menu.html">Menu</a>
             <a href="./contact.html">Contact</a>
-            <a href="./login.html">Login</a>
-        </div>
+            <a  class="active" href="./login.html">Login</a>
+   </div>
         <!--Header-->
         <center><h1>Login In/Sign Up</h1><center>
         <center><img src="assets/login.png" width=30% alt="Login"></center>
