--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
+        <link rel="stylesheet" href="assets/style.css">
         <!--Title of the page-->
         <title>Food Ordering System | Contact</title>
     </head>
     <!--Content of the web page-->
     <body>
         <!-- Navigation Bar -->
-        <div class="nav-bar">
-            <a href="./index.html">Home</a>
+        <div class="topnav">
+            <a  href="./index.html">Home</a>
             <a href="./menu.html">Menu</a>
-            <a href="./contact.html">Contact</a>
+            <a class="active" href="./contact.html">Contact</a>
             <a href="./login.html">Login</a>
-        </div>
+   </div>
         <!--Header-->
         <center><h1>We would love to hear from you!</h1></center>
         <center><img src = "assets/contact.png" alt = "contact-us" width = 40%></center>
