--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
+        <link rel="stylesheet" href="assets/style.css">
         <!--Title of the page-->
         <title>Food Ordering System | Home</title> 
     </head>
     <!--Content of the web page-->
     <body> 
     <!-- Navigation Bar -->
-        <div class="nav-bar">
-            <a href="./index.html">Home</a>
-            <a href="./menu.html">Menu</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./login.html">Login</a>
-        </div>
+    <div class="topnav">
+        <a class="active" href="./index.html">Home</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./login.html">Login</a>
+</div>
      <!--Header-->   
         <center><h1>Welcome to Food Ordering System</h1></center>  
         <center>
