--- a/menu.html
+++ b/menu.html
@@ -11,18 +11,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png">
+        <link rel="stylesheet" href="assets/style.css">
         <!--Title of the page-->
         <title>Food Ordering System | Menu</title>
     </head>
     <!--Content of the web page-->  
     <body>
         <!-- Navigation Bar -->
-        <div class="nav-bar">
+        <div class="topnav">
             <a href="./index.html">Home</a>
-            <a href="./menu.html">Menu</a>
+            <a class="active" href="./menu.html">Menu</a>
             <a href="./contact.html">Contact</a>
             <a href="./login.html">Login</a>
-        </div>
+   </div>
         <!--Header-->
         <center><h1>Menu</h1></center>
         <center><img src = "assets/menu.png" width = 30% alt = "Menu"></center>
