--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>Login page</title>
-  <link rel="stylesheet" href="assets/sstyle.css" />
+  <link rel="stylesheet" href="assets/style.css" />
  </head> 
  <body>
  <div class="login-box">
